fix: footer gap

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -7,7 +7,6 @@ $color: rgba(255, 255, 255, 0.9);
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
 
   .footer {
     display: flex;
